--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	
 -->
 <html>
 	<head>
@@ -24,17 +22,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Zak Greed</h1>
+								<p>Please, friends, show me the location of the white women.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">Lance</a></li>
+								<li><a href="#work">Xanny Bars</a></li>
+								<li><a href="#about">Juice?</a></li>
+								<li><a href="#contact">Rage and Cages</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -45,10 +42,42 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Lance</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Yeah, I just added up bands for some Rick, I just pulled up on them with the twenty-two fit
+Yeah, I just bought me some diamonds from Eliantte and I told him I need ’em to hit
+Told ’em it’s time for me to find some love and I’m takin’ these Percs, I get high as a bitch
+And if I give that lil’ pussy a chance
+I don’t know what they say behind my back
+And you know I ain’t goin’ for that
+I been as high as a planе, how you gon’ say I’m a plain?
+I don’t be remembеrin’ nothin’, I never had me a plan
+We don’t do fights, we don’t scuffle
+I’m poppin’ they bitches, they bubble
+Yeah, they been on rocks, on gravel
+Yeah, I’m on a whole ‘nother level
+Yeah, we saw your ass in trouble
+I know you dig it, bitch, yeah, I’m a shovel
+I’m in my LV bag, in my duffle
+Yeah, I run up my money, I double (Double it)
+I don’t know when them people would stab my back, but I know that my money would never<a href="#work">Xanny bars</a>.</p>
+								<p>Yeah, I just added up bands for some Rick, I just pulled up on them with the twenty-two fit
+Yeah, I just bought me some diamonds from Eliantte and I told him I need ’em to hit
+Told ’em it’s time for me to find some love and I’m takin’ these Percs, I get high as a bitch
+And if I give that lil’ pussy a chance
+I don’t know what they say behind my back
+And you know I ain’t goin’ for that
+I been as high as a planе, how you gon’ say I’m a plain?
+I don’t be remembеrin’ nothin’, I never had me a plan
+We don’t do fights, we don’t scuffle
+I’m poppin’ they bitches, they bubble
+Yeah, they been on rocks, on gravel
+Yeah, I’m on a whole ‘nother level
+Yeah, we saw your ass in trouble
+I know you dig it, bitch, yeah, I’m a shovel
+I’m in my LV bag, in my duffle
+Yeah, I run up my money, I double (Double it)
+I don’t know when them people would stab my back, but I know that my money would never</p>
 							</article>
 
 						<!-- Work -->
