--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Lance</a></li>
+								<li><a href="#lance">Lance</a></li>
 								<li><a href="#work">Xanny Bars</a></li>
 								<li><a href="#about">Juice?</a></li>
 								<li><a href="#contact">Rage and Cages</a></li>
@@ -41,7 +41,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="lance">
 								<h2 class="major">Lance</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">Xanny bars</a>.</p>
