--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 						<nav>
 							<ul>
 								<li><a href="#lance">Lance</a></li>
-								<li><a href="#work">Xanny Bars</a></li>
-								<li><a href="#about">Juice?</a></li>
-								<li><a href="#contact">Rage and Cages</a></li>
+								<li><a href="#xanny-bars">Xanny</a></li>
+								<li><a href="#rage">Rage and Cages</a></li>
+								<li><a href="#juice">Juice</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -49,7 +49,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="xanny-bars">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
@@ -57,15 +57,15 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="rage">
+								<h2 class="major">Rage and Cages</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
+							<article id="juice">
+								<h2 class="major">Juice?</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
