--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="#lance">Lance</a></li>
 								<li><a href="#xanny-bars">Xanny</a></li>
-								<li><a href="#rage">Rage and Cages</a></li>
+								<li><a href="#rage">Rage</a></li>
 								<li><a href="#juice">Juice</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
