--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 							<article id="lance">
 								<h2 class="major">Lance</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">Xanny bars</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Lance lance lance Lance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lance<a href="#xanny-bars">Xanny bars</a>.</p>
+								<p>Lance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lanceLance lance lance</p>
 							</article>
 
 						<!-- Work -->
@@ -152,10 +152,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://twitter.com/zakgreed" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://Instagram.com/ibelieksvet" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
@@ -340,7 +338,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Big Dick Bitches Ltd. Design: <a href="https://zakgreed.com">Me, Bitch.</a>.</p>
 					</footer>
 
 			</div>
