--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<img src="pic01.jpg" alt="zara" width="850" height="1275">
+<img src="pic01.gif" alt="zara" width="250" height="250">
 
 </body>
 </html>
