--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Zak Greed</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Mr. ADHD">
+<meta name="author" content="Zak Greed">
 </head>
 <body>
 
