--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Zak Greed</title>
   <link rel="icon" type="image/icon" href="favicon.ico">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9629439257258771"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
