--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-
-<img src="pic01.gif" alt="zara" width="500" height="500">
+<a href="https://jesuscavecrew.com">
+<img src="upscalezEfuoKCY_4x.jpg" alt="zara" class="center">
+</a>
 
 </body>
 </html>
