--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <a href="https://jesuscavecrew.com">
-<img src="upscalezEfuoKCY_4x.jpg" alt="zara" class="center">
+<img src="pic01.gif" alt="stitch" class="center">
 </a>
 
 </body>
